RESOLVED FIXED279091
[IFC] Incorrect vertical position of nested content with parent of 'vertical-align: bottom'
https://bugs.webkit.org/show_bug.cgi?id=279091
Summary [IFC] Incorrect vertical position of nested content with parent of 'vertical-...
alan
Reported 2024-09-03 16:29:59 PDT
ssia
Attachments
Patch (9.20 KB, patch)
2024-09-03 16:49 PDT, alan
no flags
[fast-cq]Patch (9.20 KB, patch)
2024-09-04 07:05 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-09-03 16:49:19 PDT
alan
Comment 2 2024-09-04 07:05:01 PDT
Created attachment 472447 [details] [fast-cq]Patch
EWS
Comment 3 2024-09-04 08:31:09 PDT
Committed 283153@main (6136b6004d41): <https://commits.webkit.org/283153@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472447 [details].
Radar WebKit Bug Importer
Comment 4 2024-09-04 08:32:15 PDT
Note You need to log in before you can comment on or make changes to this bug.