[IFC] Incorrect vertical position of nested content with parent of 'vertical-align: bottom' https://bugs.webkit.org/show_bug.cgi?id=279091

Reviewed by Antti Koivisto.

Certain align values can pull nested content upward producing negative descent values.
This patch makes sure we don't treat 0 as a minimum for ascent/descent.

* LayoutTests/fast/inline/nested-vertical-alignment-with-bottom-and-line-height-expected.html: Added.
* LayoutTests/fast/inline/nested-vertical-alignment-with-bottom-and-line-height.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.cpp:
(WebCore::Layout::LineBoxVerticalAligner::layoutBoundsForInlineBoxSubtree const):
(WebCore::Layout::LineBoxVerticalAligner::alignInlineLevelBoxes const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.h:

Canonical link: https://commits.webkit.org/283153@main